fix: styles for better readability

--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,39 @@
 #topbar-cta-button svg {
     color: #003300 !important;
 }
+
+:root {
+  --primary-color: #dcdcdc;
+}
+
+body {
+  color: var(--primary-color) !important;
+}
+
+.dark {
+  color: var(--primary-color) !important;
+}
+
+.dark p,
+.dark h1,
+.dark h2,
+.dark h3,
+.dark h4,
+.dark h5,
+.dark h6{
+  color: var(--primary-color) !important;
+}
+
+[data-theme="dark"] {
+  color: var(--primary-color) !important;
+}
+
+[data-theme="dark"] p,
+[data-theme="dark"] h1,
+[data-theme="dark"] h2,
+[data-theme="dark"] h3,
+[data-theme="dark"] h4,
+[data-theme="dark"] h5,
+[data-theme="dark"] h6{
+  color: var(--primary-color) !important;
+}
